@@ -227,6 +227,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+			    	<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
 					<useFile>false</useFile>
@@ -246,6 +247,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
+				    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
 					<useFile>false</useFile>
 					<includes>
 						<include>**/test/integration/**/*.java</include>
